# AIResumeScanner

./: .replit  Dockerfile  LICENSE  README.md  ai_helper.py  app.py  database.py  docker-compose.yml  job_analyzer.py  packages.txt  pyproject.toml  relevance_scorer.py  replit.nix  requirements.txt  resume_parser.py  utils.py
.streamlit/: config.toml
attached_assets/: Pasted--AI-Powered-Resume-Scanner-Requirements-Document-Project-Overview-The-AI-Powered-1744433083482.txt
