[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "docx2txt>=0.9",
    "google-generativeai>=0.8.4",
    "nltk>=3.9.1",
    "numpy>=2.2.4",
    "openai>=1.72.0",
    "pandas>=2.2.3",
    "pdfminer>=20191125",
    "pdfminer-six>=20250327",
    "psycopg2-binary>=2.9.10",
    "pypdf2>=3.0.1",
    "python-docx>=1.1.2",
    "scikit-learn>=1.6.1",
    "spacy>=3.8.5",
    "sqlalchemy>=2.0.40",
    "streamlit>=1.44.1",
    "textract>=1.5.0",
]
